# fastmath

./: .gitignore  Cargo.toml  build.rs  plot.rs  test.rs
benches/: bench.rs  devbench.rs
src/: bit_magic.rs  fastmath.rs  lib.rs  main.rs  tests.rs
src/lookup/: config.rs  const_tables.rs  lookup_table.rs  mod.rs  ordinal_float.rs
src/lookup/data/: sin_f32.rs  sin_f64.rs
src/macros/: lookup.rs
src/tests/: mod.rs  tolerance.json  tolerance.rs
src/tests/accuracy/: comparisons.rs  config.rs  exact.rs  mod.rs  x.rs
