[package]
name = "fastmath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
log = "0.4.19"
num-traits = "0.2.15"
once_cell = "1.18.0"
serde = {version = "1.0.171", features = ["derive"] }
simple_logger = "4.2.0"

[build-dependencies]
bincode = "1.3.3"
num-traits = "0.2.15"
serde = {version = "1.0.171", features = ["derive"] }

[lib]
name = "fastmath"
path = "src/lib.rs"
test = true
bench = true

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "devbench"
harness = false

[dev-dependencies]
criterion = "0.5.1"
serde = "1.0.171"
serde_json = "1.0.106"
